Changed connection method because of compatibility issues